benchmark/printtokens/input.origin/infer-out/report.txt
#0
printtokens.c:478: error: Uninitialized Value
  The value read from next_st was never initialized.
  476. 
  477.     }
  478.     if (next_st == -1) {
               ^
  479.       {
  480.       tmp___1 = error_or_eof_case(tstream_ptr, token_ptr, cu_state, token_str, token_ind,

#1
printtokens.c:485: error: Uninitialized Value
  The value read from next_st was never initialized.
  483.       return (tmp___1);
  484.     } else { //Added block
  485.     if (next_st == -2) {
               ^
  486.       {
  487.       tmp___2 = numeric_case(tstream_ptr, token_ptr, (char )((int )ch), token_str,

#2
printtokens.c:492: error: Uninitialized Value
  The value read from next_st was never initialized.
  490.       return (tmp___2);
  491.     } else { //Added block
  492.     if (next_st == -3) {
               ^
  493.       {
  494.       token_ptr->token_id = 17;

#3
printtokens.c:517: error: Uninitialized Value
  The value read from next_st was never initialized.
  515. 
  516.      
  517.     if (next_st == 16) {
               ^
  518.       goto case_6;
  519.     }

#4
printtokens.c:520: error: Uninitialized Value
  The value read from next_st was never initialized.
  518.       goto case_6;
  519.     }
  520.     if (next_st == 19) {
               ^
  521.       goto case_19;
  522.     }

#5
printtokens.c:526: error: Uninitialized Value
  The value read from next_st was never initialized.
  524. 
  525.      
  526.     if (next_st == 21) {
               ^
  527.       goto case_19;
  528.     }

#6
printtokens.c:529: error: Uninitialized Value
  The value read from next_st was never initialized.
  527.       goto case_19;
  528.     }
  529.     if (next_st == 22) {
               ^
  530.       goto case_19;
  531.     }

#7
printtokens.c:532: error: Uninitialized Value
  The value read from next_st was never initialized.
  530.       goto case_19;
  531.     }
  532.     if (next_st == 23) {
               ^
  533.       goto case_19;
  534.     }

#8
printtokens.c:535: error: Uninitialized Value
  The value read from next_st was never initialized.
  533.       goto case_19;
  534.     }
  535.     if (next_st == 24) {
               ^
  536.       goto case_19;
  537.     }

#9
printtokens.c:544: error: Uninitialized Value
  The value read from next_st was never initialized.
  542. 
  543.      
  544.     if (next_st == 27) {
               ^
  545.       goto case_27;
  546.     }

#10
printtokens.c:547: error: Uninitialized Value
  The value read from next_st was never initialized.
  545.       goto case_27;
  546.     }
  547.     if (next_st == 29) {
               ^
  548.       goto case_27;
  549.     }

#11
printtokens.c:550: error: Uninitialized Value
  The value read from next_st was never initialized.
  548.       goto case_27;
  549.     }
  550.     if (next_st == 30) {
               ^
  551.       goto case_30;
  552.     }

#12
printtokens.c:567: error: Uninitialized Value
  The value read from next_st was never initialized.
  565.     if (tmp___3 == 1) {
  566.       {
  567.       token_ptr->token_id = keyword(next_st);
                                   ^
  568.       unget_char(ch, tstream_ptr->ch_stream);
  569.       token_ptr->token_string[0] = (char )'\000';

#13
printtokens.c:586: error: Uninitialized Value
  The value read from next_st was never initialized.
  584.               ;/* CIL Label */ 
  585.     {
  586.     token_ptr->token_id = special(next_st);
                                 ^
  587.     token_ptr->token_string[0] = (char )'\000';
  588.     }

#14
printtokens.c:593: error: Uninitialized Value
  The value read from next_st was never initialized.
  591.               ;/* CIL Label */ 
  592.     {
  593.     token_ptr->token_id = constant(next_st, token_str, token_ind);
                                 ^
  594.     get_actual_token(token_str, token_ind);
  595.     strcpy(token_ptr->token_string, token_str);

#15
printtokens.c:608: error: Uninitialized Value
  The value read from next_st was never initialized.
  606.     }
  607.     {
  608.     cu_state = next_st;
           ^
  609.     ch = get_char(tstream_ptr->ch_stream);
  610.     }

#16
printtokens.c:834: error: Dead Store
  The value written to &tmp (type int) is never used.
  832.     if ((int )c != 10) {
  833.       {
  834.       tmp = is_end_of_character_stream(stream_ptr);
             ^
  835.       }
  836.                 

Found 17 issues
                Issue Type(ISSUED_TYPE_ID): #
  Uninitialized Value(UNINITIALIZED_VALUE): 16
                    Dead Store(DEAD_STORE): 1
